<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingleTaskActivity"

    android:gravity="center_vertical"
    android:orientation="vertical"
    android:background="#3CC586">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="fill_vertical"
        >


        <Button
            android:id="@+id/singleActivityRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_button"
            android:layout_marginTop="10dp"/>
    </LinearLayout>



    <TextView
        android:id="@+id/singleTaskTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:background="#CDDC39"
        android:layout_marginTop="70dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="fill_vertical"
        android:layout_marginBottom="15dp"

        >

        <Button
            android:id="@+id/singleActivityDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_button" />


        <Button
            android:id="@+id/singleActivityCrash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crash_button" />

        <Button
            android:id="@+id/singleActivityWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_button" />

    </LinearLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="fill_vertical"
        >
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Complexity:  1"
            android:id="@+id/complexitySwitch1"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value2"
            android:id="@+id/complexitySwitch2"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value3"
            android:id="@+id/complexitySwitch3"
            android:checked="true"/>

    </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="fill_vertical"
        >
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Volume:        1"
            android:id="@+id/volumeSwitch1"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value2"
            android:id="@+id/volumeSwitch2"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value3"
            android:id="@+id/volumeSwitch3"
            android:checked="true"/>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="fill_vertical"
        >
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Urgency:       1"
            android:id="@+id/urgencySwitch1"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value2"
            android:id="@+id/urgencySwitch2"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value3"
            android:id="@+id/urgencySwitch3"
            android:checked="true"/>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="fill_vertical"
        >
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enjoyment:   0"
            android:id="@+id/enjoymentSwitch1"
            android:checked="true"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/value1"
            android:id="@+id/enjoymentSwitch2"
            android:checked="true"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="fill_vertical"
        >


        <Button
            android:id="@+id/Edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginTop="10dp"/>
    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>